# logiclabs-job-career-website

./: LICENSE  README.md  app.py  pyproject.toml
templates/: footer.html  home.html  jobitem.html  nav.html
